kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  selector:
    matchLabels:
      app: hello-world-app
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: lehtux/gitlab:$CI_BUILD_REF
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  labels:
    app: hello-world-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-world-app
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-app
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - testsite1.jlehtimaki.polarsquad.dev
      secretName: hello-world-app-tls
  rules:
    - host: testsite1.jlehtimaki.polarsquad.dev
      http:
        paths:
          - backend:
              serviceName: hello-world-app
              servicePort: 8080
---
